--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MoMoAppTesting</title>
+  <title>Emploi</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="logo.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="assets/css/fontawesome.min.css">
   <!-- FlexBox grid   -->
